  with wxString::const_iterator output parameter which simply returns bool to
  indicate the parsing success.

- Some structure fields which used to be of type "const wxChar *" (such as
  wxCmdLineEntryDesc::shortName, longName and description fields) are now of
  type "const char *", you need to remove wxT() or _T() around the values used
  to initialize them (which should normally always be ASCII).

- wxIPC classes didn't work correctly in Unicode build before, this was fixed
  but at a price of breaking backwards compatibility: many methods which used
  to work with "wxChar *" before use "void *" now (some int parameters were
  also changed to size_t). While wxIPC_TEXT can still be used to transfer 7
  bit text, the new wxIPC_UTF8TEXT format is used for transferring wxStrings.
  Also notice that connection classes should change the parameter types of
  their overridden OnExecute() or override a more convenient OnExec() instead.


wxODBC and contrib libraries removal
------------------------------------

wxODBC library was unmaintained since several years and we couldn't continue
supporting it any longer so it was removed. Please use any of the other open
source ODBC libraries in the future projects.

Also the "applet", "deprecated", "fl", "mmedia" and "plot" contrib libraries
were removed as they were unmaintained and broken since several years.
The "gizmos", "ogl", "net" and "foldbar" contribs have been moved to
wxCode (see http://wxcode.sourceforge.net/complist.php); they are now
open for futher development by volunteers.

The "stc" and "svg" contribs instead have been moved respectively into a new
"official" library stc and in the core lib.


Changes in behaviour not resulting in compilation errors, please read this!
---------------------------------------------------------------------------

- Default location of wxFileConfig files has changed under Windows, you will
  need to update your code if you access these files directly.
